Closed Bug 510104 Opened 16 years ago Closed 16 years ago

NJ: fix arm merge fallout.

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: graydon, Assigned: graydon)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

ARM nanojit broke with the patch to bug 509883. ARM tinderboxes weren't online and I forgot to check at the time, sorry. Jorendorff caught it. This fixes it.
Attachment #394160 - Flags: review?(gal)
Comment on attachment 394160 [details] [diff] [review] rewrite use of removed 'samepage' macro Whats wrong with samepage?
Attachment #394160 - Flags: review?(gal) → review+
Nothing, it's just not Adobe's version and I removed it during difference-reconciliation. I just failed to also reconcile their matching change to this part of NativeARM.
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 516107
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: