Bug 510104 - NJ: fix arm merge fallout, r=gal.

--HG--
extra : rebase_source : e739a12da66e0d65171bb5c2e3c09f98431ddf7c